# tRNA_like_sequences

./: MeanStd.ipynb  dna_shuffle.ipynb  readme.md  tRNA-Destribution.ipynb
search_for_similarities/: readme.md
search_for_similarities/linux/: .gitignore  Alignment.cpp  Alignment.h  Makefile  SlidingWindow.cpp  SlidingWindow.h  SmithWaterman.cpp  SmithWaterman.h
search_for_similarities/windows/: .gitignore  CMakeLists.txt  README.md  compile_win.bat
search_for_similarities/windows/SearchForSimilarities/: Alignment.cpp  Alignment.h  Application.cpp  SearchForSimilarities.vcxproj  SearchForSimilarities.vcxproj.filters  SlidingWindow.cpp  SlidingWindow.h  SmithWaterman.cpp  SmithWaterman.h
search_for_similarities/windows/SearchForSimilarities/Debug/: SearchForSimilarities.exe.recipe  SearchForSimilarities.ilk  vc142.idb  vc143.idb
search_for_similarities/windows/SearchForSimilarities/Debug/SearchFo.6e618bf6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SearchForSimilarities.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
trna_data_base/: readme.md
trna_data_base/client/: package-lock.json  package.json
trna_data_base/client/public/: index.html
trna_data_base/client/src/: App.vue  main.js
trna_data_base/client/src/components/: Header.vue  PostItem.vue  PostList.vue  Sidebar.vue
trna_data_base/client/src/pages/: Help.vue  Info.vue  Main.vue  Seq.vue
trna_data_base/server/: package-lock.json  package.json
trna_data_base/server/src/: fillInDB.js  main.js  router.js  tRNA.js
(+4 files in other folders)
